--- a/application/templates/proponent/existing_applications.html
+++ b/application/templates/proponent/existing_applications.html
@@ -15,7 +15,7 @@
                             {% for q in allq %}
                             <div class="row">
                                <div class="card col-md-4-wp4" style="width: 18rem;height:auto;">
-                                  <img class="card-img-top" src="static/images/card-img.jpg" alt="Card image cap">
+                                  <!-- <img class="card-img-top" src="static/images/card-img.jpg" alt="Card image cap"> -->
                                   <div class="card-body">
                                      <h6 class="card-title">Project Name: {{ q.name }}</h6>
                                      <h6>Project ID: {{ q.id }}</h6>
