--- a/application/templates/proponent/form_5.html
+++ b/application/templates/proponent/form_5.html
@@ -54,7 +54,7 @@
                             <br>
                             <div class="form-group">
                                <label for="inputfile3">If yes, provide the requisite Utilisation certificate</label>
-                               <input type="file" name="u-certificate" class="form-control" id="inputfile3" >
+                               <input type="file" name="u_certificate" class="form-control" id="inputfile3" >
                             </div>
                             <br>
                             <div class="form-group">
