--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -109,7 +109,7 @@
             <div class="row">
                <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start" data-aos="fade-right" data-aos-delay="150">
                   <!-- <h1 style="font-size: 50px;margin-left: 10%;padding-left: 10%;margin-top: 10%;">MOTIVE OF KHELO INDIA SCHEME</h1>  -->
-                  <img src="static/images/objectives.png" alt="" class="hero-img"  style="margin-left:25%; width:200%; height:100%; image-orientation: from-image;">
+                  <img src="static/images/objectives.png" alt="" class="hero-img"  style="margin-left:25%; width:200%; height:100%; image-orientation: from-image; object-fit: contain;">
                </div>
             </div>
          </section>
