--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -34,7 +34,7 @@
                                     <input type="password" name="password" class="form-control" id="exampleInputPassword1">
                                  </div>
                                  <button type="submit" class="btn btn-theme">Login</button>
-                                 <a href="#" class="forgot-link float-right text-primary">Forgot password?</a>
+                                 <a href="{{ url_for('reset_request') }}" class="forgot-link float-right text-primary">Forgot password?</a>
                               </form>
                            </div>
                         </div>
