--- a/application/templates/proponent/dpr.html
+++ b/application/templates/proponent/dpr.html
@@ -269,13 +269,12 @@
 
                <!-- Documents table -->
   <table class="table table-striped">
-
+    <form method="POST">
     <!--Table head-->
     <thead>
       <tr style="text-align:center;background-color:orange;">
         <th>S.no</th>
         <th>Document Parameters/Specifications</th>
-        <th>Document</th>
       </tr>
     </thead>
     <!--Table head-->
@@ -284,7 +283,7 @@
     <tbody style="text-align:center;">
       <tr>
         <th scope="row">1</th>
-        <td>Evidence of Land Ownership</td>
+        <td><a href="{{ url_for('land_proof', id=current_user.id) }}">Evidence of Land Ownership</a></td>
         <td></td>
       </tr>
       <tr>
@@ -394,6 +393,7 @@
       <td></td>
       </tr>
     </tbody>
+  </form>
   </table>
   <!-- end of documents table -->
                  <br><br>
