--- a/application/templates/admin/rejected.html
+++ b/application/templates/admin/rejected.html
@@ -1,4 +1,4 @@
-{% extends "committee/layout.html" %}
+{% extends "admin/layout.html" %}
 {% block content %}
 <section style="padding-left:16%; padding-top:2%; padding-right:1%">
    <h3 class="h4 font-weight-bold text-theme" style="text-align:center;">Rejected Projects</h3>
@@ -70,7 +70,7 @@
                <td>{{ project.name }}</td>
                <td>{{ project.add2 }}</td>
                <td>{{ project.total }}</td>
-               <td> REJECTED BY TECHNICAL COMMITTEE </td>
+               <td> REJECTED </td>
                
 
             </tr>
