--- a/application/templates/committee/layout.html
+++ b/application/templates/committee/layout.html
@@ -30,7 +30,7 @@
                </a> 
             </li>
             <li>
-               <a href="#">
+               <a href="{{ url_for('rejected_projects') }}">
                <i class='bx bx-book-alt' ></i>
                <span class="links_name">Rejected Projects</span>
                </a>
