--- a/application/templates/committee/rejected_filter_projects.html
+++ b/application/templates/committee/rejected_filter_projects.html
@@ -1,10 +1,9 @@
 {% extends "committee/layout.html" %}
 {% block content %}
-<section style="padding-left:16%; padding-top:2%; padding-right:1%">
-   <h3 class="h4 font-weight-bold text-theme" style="text-align:center;">Rejected Projects</h3>
-   <br>
-   <div class="col-md-9"></div>
-   <div class="col-md-3 " style="offset:20px;">
+<section style="padding-left:16%; padding-top:2%; padding-right:1%"></section>
+<h3 class="h4 font-weight-bold text-theme" style="text-align:center;">Rejected Projects</h3>
+<div class="col-md-9"></div>
+   <div class="col-md-3 " style="offset:20px; margin-left: 20%;">
       <br>
       <p><b>Select State</b></p>
       <select name="filter_state" id="inputState" style="background-color: rgb(255, 255, 255);"
@@ -49,14 +48,32 @@
       </select>
 
    </div>
+</section>
+{% if p|length == 0 %}
+<div class="table-responsive text-nowrap"></div>
+<div style="max-width: 2000px; margin-left: 20%; margin-right:5% ;" class="alert alert-primary d-flex align-items-center mt-3" role="alert">
 
-   <br>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+        class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:" >
+        <path
+            d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+    </svg>
+    <div >
+        No applications.
+    </div>
 
-   <div class="table-responsive text-nowrap">
-      <table class="table table-striped">
-         <thead>
+</div>
+</div>
+{% else %}
+{% for project in p %}
+<section style="padding-left:16%; padding-top:2%; padding-right:1%">
+    <br>
+    <div class="col-md-9"></div>
+<div class="table-responsive text-nowrap">
+    <table class="table table-striped">
+        <thead>
             <tr style="background-color: #F08B14;font-family: sans-serif;text-align: center;">
-               <th>PROJECT ID</th>
+                <th>PROJECT ID</th>
                <th>PROJECT NAME</th>
                <th>PROJECT LOCATION</th>
                <th>TOTAL</th>
@@ -64,19 +81,18 @@
             </tr>
          </thead>
          <tbody>
-            {% for project in p %}
             <tr>
                <td>{{ project.id }}</td>
                <td>{{ project.name }}</td>
                <td>{{ project.add2 }}</td>
                <td>{{ project.total }}</td>
                <td> REJECTED BY TECHNICAL COMMITTEE </td>
-               
-
             </tr>
-            {% endfor %}
-         </tbody>
-      </table>
-   </div>
+        </tbody>
+    </table>
 </section>
-{% endblock content %}
+{% endfor %}
+{% endif %}
+</div>
+
+{% endblock %}
