--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -73,26 +73,20 @@
 
          <!-- ======= About Us Section ======= -->
          <section id="about" class="about" style="background-color: #ff9933;">
-            <div class="container" style="padding-top: 50px;">
+            <div class="container" style="padding-top: 50px; padding-bottom: 50px;">
                <div class="section-title" data-aos="fade-up">
-                  <h2>About Khelo India</h2>
+                  <h2>ABOUT KHEL HINDUSTAN</h2>
                </div>
                <div class="row content">
                   <div class="col-lg" data-aos="fade-up" data-aos-delay="150">
                      <p>
-                        The importance of sports and fitness in one’s life is invaluable. Playing sports inculcates team spirit, develops strategic & analytical thinking, leadership skills, goal setting and risk taking. A fit and healthy individual leads to an equally healthy society and strong nation.
+                        Khel Hindustan is a web application that automates the process of applying for the approval of sports infrastructure projects under the Khelo India Scheme.
                      </p>
                      <p>
-                        Sports is an extremely important component for the overall development of our nation. India, in the last few years has made steady progress in the field of sports. This tremendous potential needs to be showcased at a global platform. It’s time we inspire young talent, give them top-notch infrastructure and training of the highest level. We need to inculcate a strong spirit of participation in sports that enables players to demonstrate their true potential. Only then can India realise its dream of becoming a sports super power.
+                        In any given year, the Ministry receives a large number of such proposals in accordance with the forms outlined in the Scheme's Operational Guidelines.These proposals are submitted to a comprehensive screening and evaluation process before being approved in compliance with the Scheme's guidelines. The entire procedure is not only time-consuming and complex, but also demands a massive amount of paperwork and manual processing.
                      </p>
                      <p>
-                        The Khelo India programme has been introduced to revive the sports culture in India at the grass-root level by building a strong framework for all sports played in our country and establish India as a great sporting nation.
-                     </p>
-                     <p>
-                        Talented players identified in priority sports disciplines at various levels by the High-Powered Committee will be provided annual financial assistance of INR 5 lakh per annum for 8 years.
-                     </p>
-                     <p>
-                        Khelo India School Games, which are a part of the Khelo India programme, are being held from 31st January to 8th February, 2018 in New Delhi. Under-17 athletes have been invited to participate across 16 disciplines, which are as follows: Archery, Athletics, Badminton, Basketball, Boxing, Football, Gymnastics, Hockey, Judo, Kabaddi, Kho-Kho, Shooting, Swimming, Volleyball, Weightlifting, and Wrestling.
+                        The fundamental purpose of Khel Hindustan is to alleviate the vast workload and laborious processing involved in the application process by digitalising it, in which we collect data from applicants completely via web questionnaires.The system also aids in the review and evaluation of the proposal, lowering the time necessary to sanction a project proposal.The technology also assists in the proposal's review and evaluation, reducing the time required to sanction a project proposal.
                      </p>
                   </div>
                </div>
