--- a/application/templates/otp.html
+++ b/application/templates/otp.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
    <head>
-      <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <!-- Bootstrap CSS -->
+
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="{{ url_for('static', filename='register.css') }}">
-      <title>Forgot Password</title>
+      <title>OTP Verification</title>
    </head>
    <body>
       <div id="main-wrapper" class="container" style="padding-top:5%;">
@@ -18,37 +17,43 @@
                   <div class="col-lg-12">
                      <div class="p-5">
                         <div class="mb-9">
-                           <h3 class="h4 font-weight-bold text-theme" style="text-align:center;">Forgot Password</h3>
+                           <h3 class="h4 font-weight-bold text-theme" style="text-align:center;">OTP Verification</h3>
                         </div>
-                        <form method="POST" action="/reset_request">
-                           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                            <div class="container form-group">
                               <div class="row" style="padding-top:40px;">
                                  <div class="col-md-3"></div>
                                  <div class="col-md-6" style="align-items:center;">
-                                    <p>Enter your Email</p>
-                                    <input type="email" name="email" style="background-color: rgb(255, 255, 255);" class="form-control"   required>
+                                    <form method="POST" action="/verification">
+                                       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                                       <p>Enter OTP</p>
+                                       <input type="number" name="user_otp" style="background-color: rgb(255, 255, 255);" class="form-control" required>
+                                       <input style="padding: auto;" type="submit"  value="SUBMIT" class="form-control-login btn btn-theme btn-lg ">
+                                    </form>
                                  </div>
                                  <br>
                                  <div class="container" style="width: 30%; display: flex; padding-top:45px; justify-content: center;">
-                                    <input style="padding: auto;" type="submit"  value="SUBMIT" class="form-control-login btn btn-theme btn-lg " onclick="myFunction()">
-                                 </div>
                               </div>
                            </div>
-                        </form>
+                        </div>
                      </div>
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <script>
-           function myFunction() {
-            alert("Check Email to reset password")
-        }
-      </script>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
    </body>
+</html> -->
+
+<html>
+    <body>
+        <form action="/verification" method='POST'>
+            <div>
+                <input type="number" name="user_otp">
+                <input type=submit>
+            </div>
+        </form>
+    </body>
 </html>
