--- a/application/templates/admin/filter_projects.html
+++ b/application/templates/admin/filter_projects.html
@@ -73,18 +73,18 @@
                <td>{{ project.add2 }}</td>
                <td>
                   <form action="/projects" , method="POST">
-                     <a href="/dpr/{{project.id}}" 
+                     <a href="/dpr/{{project.id}}" value=2
                      style="padding: auto; justify-content:center;" type="button"
                      class="form-control-login btn btn-primary btn-theme btn-md">View Details</a>
                   </form>
                </td>
                <td>{{ project.total }}</td>
              <td>
-                 <form action="/projects" , method="POST"><button name="method" value=1 type="submit"
+                 <form action="/projects" , method="POST"><button name="method" value=3 type="submit"
                          class="btn btn-success"> Approve </button></form>
              </td>
              <td>
-                 <form action="/projects" , method="POST"><button name="method" value=2 type="submit"
+                 <form action="/projects" , method="POST"><button name="method" value=4 type="submit"
                          class="btn btn-danger"> Reject </button></form>
              </td>
             </tr>
