--- a/application/templates/admin/layout.html
+++ b/application/templates/admin/layout.html
@@ -24,13 +24,25 @@
                </a>
             </li>
             <li>
-               <a href="{{ url_for('project') }}">
+               <a href="/project">
                <i class='bx bx-grid-alt' ></i>
                <span class="links_name">Applications</span>
                </a> 
             </li>
             <li>
-               <a href="#">
+               <a href="/approved">
+               <i class='bx bx-book-alt' ></i>
+               <span class="links_name">Approved Projects</span>
+               </a>
+            </li>
+            <li>
+               <a href="/rejectedpro">
+               <i class='bx bx-book-alt' ></i>
+               <span class="links_name">Rejected Projects</span>
+               </a>
+            </li>
+            <li>
+               <a href="{{ url_for('sanctioned_infrastructure') }}">
                <i class='bx bx-book-alt' ></i>
                <span class="links_name">Sanctioned Projects</span>
                </a>
