--- a/application/templates/committee/filter_projects.html
+++ b/application/templates/committee/filter_projects.html
@@ -1,8 +1,54 @@
 {% extends "committee/layout.html" %}
 {% block content %}
+<section style="padding-left:16%; padding-top:2%; padding-right:1%"></section>
+<h3 class="h4 font-weight-bold text-theme" style="text-align:center;">Projects</h3>
+<div class="col-md-9"></div>
+   <div class="col-md-3 " style="offset:20px; margin-left: 20%;">
+      <br>
+      <p><b>Select State</b></p>
+      <select name="filter_state" id="inputState" style="background-color: rgb(255, 255, 255);"
+         onchange="location = this.value;" class="form-control form-control-md">
+         <option>Select State</option>
+         <option value="/filter_projects/Andra Pradesh">Andra Pradesh</option>
+         <option value="/filter_projects/Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+         <option value="/filter_projects/Arunachal Pradesh">Arunachal Pradesh</option>
+         <option value="/filter_projects/Assam">Assam</option>
+         <option value="/filter_projects/Bihar">Bihar</option>
+         <option value="/filter_projects/Chhattisgarh">Chhattisgarh</option>
+         <option value="/filter_projects/Chandigarh">Chandigarh</option>
+         <option value="/filter_projects/Dadar and Nagar Haveli">Dadar and Nagar Haveli</option>
+         <option value="/filter_projects/Daman and Diu">Daman and Diu</option>
+         <option value="/filter_projects/Delhi">Delhi</option>
+         <option value="/filter_projects/Goa">Goa</option>
+         <option value="/filter_projects/Gujarat">Gujarat</option>
+         <option value="/filter_projects/Haryana">Haryana</option>
+         <option value="/filter_projects/Himachal Pradesh">Himachal Pradesh</option>
+         <option value="/filter_projects/Jammu and Kashmir">Jammu and Kashmir</option>
+         <option value="/filter_projects/Jharkhand">Jharkhand</option>
+         <option value="/filter_projects/Karnataka">Karnataka</option>
+         <option value="/filter_projects/Kerala">Kerala</option>
+         <option value="/filter_projects/Lakshadeep">Lakshadeep</option>
+         <option value="/filter_projects/Madya Pradesh">Madya Pradesh</option>
+         <option value="/filter_projects/Maharashtra">Maharashtra</option>
+         <option value="/filter_projects/Manipur">Manipur</option>
+         <option value="/filter_projects/Meghalaya">Meghalaya</option>
+         <option value="/filter_projects/Mizoram">Mizoram</option>
+         <option value="/filter_projects/Nagaland">Nagaland</option>
+         <option value="/filter_projects/Orissa">Orissa</option>
+         <option value="/filter_projects/Punjab">Punjab</option>
+         <option value="/filter_projects/Pondicherry">Pondicherry</option>
+         <option value="/filter_projects/Rajasthan">Rajasthan</option>
+         <option value="/filter_projects/Sikkim">Sikkim</option>
+         <option value="/filter_projects/Tamil Nadu">Tamil Nadu</option>
+         <option value="/filter_projects/Telagana">Telagana</option>
+         <option value="/filter_projects/Tripura">Tripura</option>
+         <option value="/filter_projects/Uttaranchal">Uttaranchal</option>
+         <option value="/filter_projects/Uttar Pradesh">Uttar Pradesh</option>
+         <option value="/filter_projects/West Bengal">West Bengal</option>
+      </select>
 
-
-
+   </div>
+</section>
 {% if p|length == 0 %}
 <div class="table-responsive text-nowrap"></div>
 <div style="max-width: 2000px; margin-left: 20%; margin-right:5% ;" class="alert alert-primary d-flex align-items-center mt-3" role="alert">
@@ -47,17 +93,17 @@
                     <form action="/projects" , method="POST">
                         <!-- <button name="method" value=1 type="submit" class="btn btn-primary" > Set Marks </button> -->
                         <a href="/cdpr_marks/{{project.id}}"
-                            style="padding: auto; width: 20%;justify-content: left;padding-right:100%;" type="button"
-                            class="form-control-login btn btn-theme btn-md">Set Marks</a>
-                    </form>
-                </td>
-                <td>
-                    <form action="/projects" , method="POST">
+                           style="padding: auto; justify-content:center;" type="button"
+                           class="form-control-login btn btn-primary btn-theme btn-md">Set Marks</a>
+                     </form>
+                  </td>
+                  <td>
+                     <form action="/projects" , method="POST">
                         <!-- <button name="method" value=1 type="submit" class="btn btn-primary" > View </button> -->
-                        <a href="/cdpr/{{project.id}}"
-                            style="padding: auto; width: 20%;justify-content: left;padding-right:100%;" type="button"
-                            class="form-control-login btn btn-theme btn-md">View</a>
-                    </form>
+                        <a href="/cdpr/{{project.id}}" value=2
+                           style="padding: auto; justify-content:center;" type="button"
+                           class="form-control-login btn btn-primary btn-theme btn-md">View Details</a>
+                     </form>
                 </td>
                 <td>
                     <form action="/projects" , method="POST"><button name="method" value=3 type="submit"
